...
  func showQuizResult() {
    guard let presenter else { return }
    let message = presenter.makeResultsMessage()
    let alertModel = AlertModel(title: "Этот раунд окончен!",
                                message: message,
                                buttonText: "Сыграть еще раз",
                                accessibilityIndicator: "QuizResultAlert") { [weak self, weak presenter] in
      guard let self else { return }
      presenter?.alertPresenterDidTapButton(restart: true)
    }
    
    presenter.showAlert(alertModel)
  }
...
